# study-binary-loadtest

./: Dockerfile  README.md  locustfile.py  pyproject.toml
.github/workflows/: main.yml
actions/: delete_binary_action.py  get_rest_action.py  post_binary_action.py  request_support.py
apis/scenario1/: scenario.py
apis/scenario2/: scenario.py
apis/scenario3/: scenario.py
