[tool.poetry]
name = "study-binary-loadtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
locust = "2.10.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.taskipy.tasks]
format = "black actions apis locustfile.py --skip-string-normalization"
lint = "flake8 actions apis locustfile.py"
