[tool.poetry]
name = "study-binary-loadtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
locust = "2.10.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
taskipy = "^1.10.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
# skip-string-normalization で ' を " に変えることを抑制している。
# ※ PEP8 では規定されていないが好みだと思うので抑制している。
format = "black actions apis locustfile.py --skip-string-normalization"

# E501 は行数
lint = "flake8 actions apis locustfile.py --ignore=E501"
